# rapp-platform

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  api_documentation.html  documentation.html  documentation2.html  documentation3.html  index.html  params.json
rapp_application_authentication_manager/: CMakeLists.txt  README.md  package.xml  setup.py
rapp_application_authentication_manager/cfg/: rapp_application_authentication_manager_params.yaml
rapp_application_authentication_manager/launch/: application_authentication.launch
rapp_application_authentication_manager/src/: application_authentication_node.py  rapp_exceptions.py
rapp_audio_processing/: CMakeLists.txt  README.md  package.xml  setup.py
rapp_audio_processing/cfg/: rapp_audio_processing_params.yaml
rapp_audio_processing/launch/: audio_processing.launch
rapp_audio_processing/src/: rapp_audio_processing.py
rapp_caffe_wrapper/: CMakeLists.txt  README.md  package.xml
rapp_caffe_wrapper/cfg/: rapp_caffe_wrapper_params.yaml
rapp_caffe_wrapper/launch/: caffe_wrapper.launch
rapp_caffe_wrapper/src/: app_error_exception.py  caffe_wrapper.py  caffe_wrapper_main.py  image_classification.py  image_registration_to_ontology.py  ontology_class_bridge.py
rapp_caffe_wrapper/tests/: rapp_caffe_wrapper_functional_tests.launch  rapp_caffe_wrapper_functional_tests.py
rapp_cloud_agent_manager/: CMakeLists.txt  README.md  package.xml
rapp_cloud_agent_manager/cfg/: rapp_cloud_agent_manager_params.yaml
rapp_cloud_agent_manager/launch/: rapp_cloud_agent_manager.launch
rapp_cloud_agent_manager/src/: cloud_agent_mysql_functions.py  create_container.py  rapp_cloud_agent_manager.py  rapp_cloud_agent_manager_main.py
rapp_cognitive_exercise/: CMakeLists.txt  README.md  package.xml
rapp_cognitive_exercise/cfg/: rapp_cognitive_exercise_params.yaml
rapp_cognitive_exercise/cognitiveTests/: ArithmeticCts_BasicArithmeticCts_diff1.xml  ArithmeticCts_BasicArithmeticCts_diff1__var1.xml  ArithmeticCts_BasicArithmeticCts_diff1__var15.xml  ArithmeticCts_BasicArithmeticCts_diff1__var16.xml  ArithmeticCts_BasicArithmeticCts_diff1__var17.xml  ArithmeticCts_BasicArithmeticCts_diff1__var2.xml  ArithmeticCts_BasicArithmeticCts_diff1__var20.xml  ArithmeticCts_BasicArithmeticCts_diff1__var24.xml  ArithmeticCts_BasicArithmeticCts_diff1__var26.xml  ArithmeticCts_BasicArithmeticCts_diff1__var30.xml  ArithmeticCts_BasicArithmeticCts_diff1_id_0.xml  ArithmeticCts_BasicArithmeticCts_diff1_id_1.xml  ArithmeticCts_BasicArithmeticCts_diff1_var1.xml  ArithmeticCts_BasicArithmeticCts_diff2.xml  ArithmeticCts_BasicArithmeticCts_diff2__var1.xml  ArithmeticCts_BasicArithmeticCts_diff2__var2.xml  ArithmeticCts_BasicArithmeticCts_diff2_id_0.xml  ArithmeticCts_BasicArithmeticCts_diff2_id_1.xml  ArithmeticCts_BasicArithmeticCts_diff2_id_2.xml  ArithmeticCts_BasicArithmeticCts_diff3.xml  ArithmeticCts_BasicArithmeticCts_diff3__var1.xml  ArithmeticCts_BasicArithmeticCts_diff3__var2.xml  ArithmeticCts_BasicArithmeticCts_diff3_id_0.xml  ArithmeticCts_BasicArithmeticCts_diff3_id_1.xml  ArithmeticCts_BasicArithmeticCts_diff3_id_2.xml  ArithmeticCts_TimeDifferenceCts_diff1.xml  ArithmeticCts_TimeDifferenceCts_diff1__var1.xml  ArithmeticCts_TimeDifferenceCts_diff1__var2.xml  ArithmeticCts_TimeDifferenceCts_diff1_id_0.xml  ArithmeticCts_TimeDifferenceCts_diff1_id_1.xml  ArithmeticCts_TimeDifferenceCts_diff2.xml  ArithmeticCts_TimeDifferenceCts_diff2_.xml  ArithmeticCts_TimeDifferenceCts_diff2__var1.xml  ArithmeticCts_TimeDifferenceCts_diff2__var2.xml  ArithmeticCts_TimeDifferenceCts_diff2_id_0.xml  ArithmeticCts_TimeDifferenceCts_diff2_id_1.xml  ArithmeticCts_TimeDifferenceCts_diff3.xml  ArithmeticCts_TimeDifferenceCts_diff3__var1.xml  ArithmeticCts_TimeDifferenceCts_diff3__var2.xml  ArithmeticCts_TimeDifferenceCts_diff3_id_0.xml  (+52 more)
rapp_cognitive_exercise/cognitiveTestsText/: 1_1
rapp_cognitive_exercise/cognitiveTestsTextOld/: addscript.sh
rapp_cognitive_exercise/launch/: cognitive_exercise.launch
rapp_cognitive_exercise/scripts/: addNewTestsFromFolderScript.sh  create_single_test.sh
rapp_cognitive_exercise/src/: app_error_exception.py  cognitive_exercise main.py  cognitive_exercise.py  cognitive_test_creator.py  creator.py  helper_functions.py  recordUserCognitiveTestPerformance.py  returnTestsOfTypeSubtypeDiffuclty.py  test_selector.py  userScoreHistoryForAllCategories.py  userScoresForAllCategories.py
rapp_cognitive_exercise/test/: cognitive_exercise_system_services_functional_tests.py
rapp_cognitive_exercise/tests/: cognitive_exercise_system_services_functional_tests.launch  cognitive_exercise_system_services_functional_tests.py
rapp_costmap_2d/: CMakeLists.txt  package.xml  rapp_costmap_plugins.xml
rapp_costmap_2d/plugins/: rapp_static_layer.cpp
rapp_email/: CMakeLists.txt  README.md  package.xml  setup.py
rapp_email/cfg/: email_params.yaml  rapp_email_params.yaml
rapp_email/launch/: email.launch
rapp_email/src/: email_receiver.py  email_sender.py
rapp_email/tests/: email_receiver_unit_tests.launch  email_receiver_unit_tests.py  email_sender_unit_tests.launch  email_sender_unit_tests.py
rapp_face_detection/: CMakeLists.txt  README.md  package.xml
rapp_face_detection/cfg/: face_detection_params.yaml
rapp_face_detection/launch/: face_detection.launch
rapp_face_recognition/: CMakeLists.txt  package.xml
rapp_geolocation_identifier/: CMakeLists.txt  package.xml  setup.py
rapp_hazard_detection/: CMakeLists.txt  README.md  package.xml
rapp_human_detection/: CMakeLists.txt  README.md  package.xml
rapp_image_recognition/: CMakeLists.txt  package.xml
rapp_knowrob_wrapper/: 1Ontologybckup.owl  1_1  2Ontologybckup.owl  CMakeLists.txt  Ontologybckup.owl  Ontologybckup1.owl  README.md  package.xml
rapp_map_server/: CMakeLists.txt  package.xml
rapp_mysql_wrapper/: CMakeLists.txt  README.md  package.xml
rapp_news_explorer/: CMakeLists.txt  README.md  package.xml  setup.py
rapp_object_recognition/: CMakeLists.txt  README.md  package.xml
rapp_path_planning/: CMakeLists.txt  README.md  package.xml
(+9944 files in other folders)
