<?xml version="1.0"?>
<package format="2">
  <name>rapp_application_authentication_manager</name>
  <version>0.0.1</version>
  <description>Managing the application authentication tokens</description>

  <maintainer email="etsardou@iti.gr">Emmanouil Tsardoulias</maintainer>

  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rapp_platform_ros_communications</depend>

</package>
