<?xml version="1.0"?>
<package>
  <name>rapp_audio_processing</name>
  <version>0.0.0</version>
  <description>The rapp_audio_processing package</description>

  <maintainer email="etsardou@iti.gr">etsardou@iti.gr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rapp_platform_ros_communications</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rapp_platform_ros_communications</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
