<?xml version="1.0"?>
<package format="2">
  <name>rapp_audio_processing</name>
  <version>0.0.0</version>
  <description>The rapp_audio_processing package</description>

  <maintainer email="etsardou@iti.gr">etsardou@iti.gr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rapp_platform_ros_communications</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rosutest</test_depend>

  <export>
  </export>
</package>
