<?xml version="1.0"?>
<package>
  <name>rapp_email</name>
  <version>0.0.1</version>
  <description>The rapp_email package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etsardou@iti.gr">Emmanouil Tsardoulias</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rapp_platform_ros_communications</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rapp_platform_ros_communications</run_depend>
</package>
