<?xml version="1.0"?>
<package format="2">
  <name>rapp_email</name>
  <version>0.0.1</version>
  <description>The rapp_email package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="etsardou@iti.gr">Emmanouil Tsardoulias</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>rapp_platform_ros_communications</depend>
</package>
