<?xml version="1.0"?>
<package format="2">
  <name>rapp_face_detection</name>
  <version>0.0.1</version>
  <description>The rapp_face_detection package</description>

  <maintainer email="etsardou@iti.gr">Emmanouil Tsardoulias</maintainer>

  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>rapp_platform_ros_communications</depend>
</package>
