<?xml version="1.0"?>
<package>
  <name>rapp_image_recognition</name>
  <version>0.0.1</version>
  <description>Vision cloud services</description>

  <maintainer email="stefanczyk.maciek@gmail.com">Maciej Stefańczyk</maintainer>
  <license>TODO</license>
  <author email="stefanczyk.maciek@gmail.com">Maciej Stefańczyk</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  
  <export>
  </export>
</package>
