<?xml version="1.0"?>
<package format="2">
  <name>rapp_knowrob_wrapper</name>
  <version>0.0.1</version>
  <description>The auxiliary rapp_knowrob_wrapper package</description>

  <maintainer email="etsardou@iti.gr">Emmanouil Tsardoulias</maintainer>

  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>rapp_platform_ros_communications</depend>
  <depend>json_prolog</depend>
</package>
